<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/shopName"
            android:layout_width="wrap_content"
            android:layout_height="32dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" />

        <View
            android:layout_width="0dip"
            android:layout_height="1dip"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/cancelOrderButton"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:background="@drawable/actionbar_btn"
            android:contentDescription="@null"
            android:src="@drawable/icon_delete" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="#E5E5E5" />

    <include layout="@layout/shopping_cart_order_item_header" />

    <LinearLayout
        android:id="@+id/orderItemsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="#E5E5E5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_total_amount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rmb"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/totalWithCostOfRunErrands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_shopping_cart_order_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rmb"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/costOfRunErrands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="20dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_shopping_cart_order_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_goods_quantity" />

        <TextView
            android:id="@+id/totalQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red" />
    </LinearLayout>

    <TextView
        android:id="@+id/shopTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="#E5E5E5" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/text_order_sn"
                android:textColor="#888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/serialNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:textColor="#888"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_order_status"
                android:textColor="#888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:textColor="#888"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_submit_time"
                android:textColor="#888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/submitTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/label_order_comment"
                android:textColor="#888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>